--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -15,7 +15,7 @@ env:
   DEPLOYMENT_NAME: "csu830"
 
   # Azure region to which the resources will be deployed
-  DEPLOYMENT_REGION: "eastus"
+  DEPLOYMENT_REGION: "eastus2"
 
 on:
   # Triggers the workflow on push events on the main branch
