--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -12,10 +12,10 @@ name: Build and Deploy Application
 env:
   # This is the global resource prefix for this deployment
   # Use lower case letters and numbers only
-  DEPLOYMENT_NAME: "csu831"
+  DEPLOYMENT_NAME: "csu103"
 
   # Azure region to which the resources will be deployed
-  DEPLOYMENT_REGION: "eastus2"
+  DEPLOYMENT_REGION: "southcentralus"
 
 on:
   # Triggers the workflow on push events on the main branch
